# forklift

./: WORKSPACE  build.sh  build_and_deploy.sh  go.mod  go.sum
operator/: BUILD.bazel
operator/config/crd/bases/: forklift.konveyor.io_migrations.yaml  forklift.konveyor.io_plans.yaml
pkg/apis/forklift/v1beta1/plan/: vm.go  zz_generated.deepcopy.go
pkg/controller/plan/: kubevirt.go
pkg/controller/plan/adapter/ova/: builder.go
virt-v2v/: BUILD.bazel
vmtoolsd-shim/: BUILD.bazel  main.go
vmtoolsd-shim/cmd/: BUILD.bazel  root.go
vmtoolsd-shim/pkg/utils/: BUILD.bazel  utils.go
