load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["root.go"],
    importpath = "github.com/konveyor/forklift-controller/vmtoolsd-shim/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/pkg/errors",
        "//vendor/github.com/spf13/cobra",
        "//vmtoolsd-shim/pkg/utils",
    ],
)
